--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -482,6 +482,7 @@ section .container {
   display: flex;
   align-items: center;
   padding: 20px;
+  margin-bottom: 20px;
   background: #09203a;
   transition: ease-in-out 0.3s;
 }
